Added 3 lists & Added div and section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lectia 4</title>
 </head>
+
 <body>
-    
+    <div class="ordered_list">
+        <ol>
+            <li>First</li>
+            <li>Second</li>
+            <li>Third</li>
+            <li>Fourth</li>
+        </ol>
+    </div>
+
+    <section class="unoredered_list">
+        <ul>
+            <li>Milk</li>
+            <li>Bread</li>
+            <li>Eggs</li>
+            <li>Water</li>
+        </ul>
+    </section>
+
+    <div class="description_list">
+        <dl>
+            <dt>VsCode</dt>
+            <dd>Visual Studio Code is a code editor redefined and optimized for building and debugging modern web and cloud applications. Visual Studio Code is free.</dd>
+        </dl>
+    </div>
 </body>
+
 </html>
