--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
 </head>
 
 <body>
+
+    <div class="h_p">
+        <h1>This is a text with h1 tag.</h1>
+        <p>This is the paragraph for 1st heading tag</p>
+
+            <h2>This is a text with h2 tag.</h2>
+            <p>This is the paragraph for 2nd heading tag</p>
+
+                <h3>This is a text with h3 tag.</h3>
+                <p>This is the paragraph for 3rd heading tag</p>
+
+                    <h4>This is a text with h4 tag.</h4>
+                    <p>This is the paragraph for 4th heading tag</p>
+
+                        <h5>This is a text with h5 tag.</h5>
+                        <p>This is the paragraph for 5th heading tag</p>
+
+                            <h6>This is a text with h6 tag.</h6>
+                            <p>This is the paragraph for 6th heading tag</p>
+    </div>
+
+
+
+
     <div class="ordered_list">
         <ol>
             <li>First</li>
@@ -29,9 +53,11 @@
     <div class="description_list">
         <dl>
             <dt>VsCode</dt>
-            <dd>Visual Studio Code is a code editor redefined and optimized for building and debugging modern web and cloud applications. Visual Studio Code is free.</dd>
+                <dd>Visual Studio Code is a code editor redefined and optimized for building and debugging modern web and
+                cloud applications. Visual Studio Code is free.</dd>
         </dl>
     </div>
+
 </body>
 
 </html>
