--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <!-- Tu nu ai spus nimic despre comentariu, dar eu am decis sa adaug :) -->
+
 
     <div class="h_p">
         <h1>This is a text with h1 tag.</h1>
